--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBMrIFX0HNsxsWQorNSuXl34nxdwfIrAZ8",
+    authDomain: "multiplayer-car-race-fdddc.firebaseapp.com",
+    databaseURL: "https://multiplayer-car-race-fdddc-default-rtdb.firebaseio.com",
+    projectId: "multiplayer-car-race-fdddc",
+    storageBucket: "multiplayer-car-race-fdddc.appspot.com",
+    messagingSenderId: "790546589590",
+    appId: "1:790546589590:web:bae493df00bbb81194dfb7"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
